--- a/public/themes/custom/hdbt_subtheme/templates/layout/region--header-top.html.twig
+++ b/public/themes/custom/hdbt_subtheme/templates/layout/region--header-top.html.twig
@@ -15,8 +15,8 @@
 {% if content %}
   <div class="header-top">
     <div class="helfi-link">
-      <a href="https://www.hel.fi/fi/" class="menu__link">
-        <span class="menu__link__text">Hel.fi</span>
+      <a href="{{ frontpage_instance_url }}" class="menu__link">
+        <span class="menu__link__text">{{ "Hel.fi front page"|t }}</span>
         <span class="hel-icon hel-icon--link-external" aria-hidden="true"></span>
       </a>
     </div>
