Use city name in header top helfi link.

--- a/public/themes/custom/hdbt_subtheme/templates/layout/region--header-top.html.twig
+++ b/public/themes/custom/hdbt_subtheme/templates/layout/region--header-top.html.twig
@@ -16,7 +16,7 @@
   <div class="header-top">
     <div class="helfi-link">
       <a href="{{ frontpage_instance_url }}" class="menu__link">
-        <span class="menu__link__text">{{ "Hel.fi front page"|t }}</span>
+        <span class="menu__link__text">{{ city_name }}</span>
         <span class="hel-icon hel-icon--link-external" aria-hidden="true"></span>
       </a>
     </div>
